force-app/main/default/objects/Activity/fields/Task_closure_date__c.field-meta.xml
<CustomField>
    <fullName>Task_closure_date__c</fullName>
    <label>Task closure date</label>
    <type>Date</type>
</CustomField>