force-app/main/default/objects/Activity/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contract creation notification</fullName>
                <default>true</default>
                <label>Contract creation notification</label>
            </value>
            <value>
                <fullName>Contact the customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>